recursion.lessons.recursion.tree.Tree.scala.error
Tree:13: error: not found: value leveBrosse
		leveBrosse()
                ^Tree:15: error: not found: value baisseBrosse
		baisseBrosse()
                ^